Fix z-index for avoiding btns show over the readingList-container

--- a/pruebas/01-reading-list/nico-bt/src/App.css
+++ b/pruebas/01-reading-list/nico-bt/src/App.css
@@ -37,7 +37,7 @@ button {
   background-color: #333;
   color: #fff;
   padding: 2px;
-  z-index: 1;
+  z-index: 20;
 }
 .readingList-container ul {
   margin: 8px;
